# haskell-ci

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  appveyor.yml  haskell-ci.cabal
ci/: before_deploy.ps1  before_deploy.sh  install_stack.sh
test/: Spec.hs
