name:                haskell-ci
version:             0.0.4.1
-- synopsis:
-- description:
homepage:            https://github.com/joshbohde/haskell-ci#readme
license:             BSD3
license-file:        LICENSE
author:              Josh Bohde
maintainer:          josh@joshbohde.com
copyright:           2018 Josh Bohde
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskell-ci
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

test-suite haskell-ci-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joshbohde/haskell-ci
